# CodexBar-Linux

./: .gitignore  .gitmodules
.github/workflows/: ci-linux.yml  release-linux-deb.yml
engine/SweetCookieKit/: Package.swift
engine/SweetCookieKit/Examples/CookieCLI/: Package.swift
engine/SweetCookieKit/Examples/CookieCLI/Sources/SweetCookieCLI/: main.swift
engine/SweetCookieKit/Sources/SweetCookieKit/: ChromiumLevelDBReader.swift  ChromiumLocalStorageReader+LevelDB.swift  GeckoCookieImporter.swift  LinuxBrowserCookieSupport.swift  LinuxChromeCookieImporter.swift  LinuxGeckoCookieImporter.swift  LinuxSQLite.swift  SnappyDecoder.swift
engine/SweetCookieKit/Tests/SweetCookieKitTests/: BrowserCookieDomainMatcherTests.swift  ChromiumLevelDBTableTests.swift  ChromiumLocalStorageReaderTests.swift  ChromiumProfileLocatorTests.swift  SnappyDecoderTests.swift
gui/: Cargo.toml
gui/src/: autostart.rs  config_store.rs  cost_window.rs  engine_client.rs  format.rs  icon_renderer.rs  main.rs  model.rs  notifications.rs  panel.rs  popover.rs  providers.rs  settings.rs  tray.rs
gui/src/login/: api_key.rs  cli_check.rs  mod.rs  oauth.rs
gui/src/web/: cookie_import.rs  mod.rs
gui/tests/fixtures/: cost-codex.json  cost-default.json  usage-claude-web-ceiling.json  usage-codex-cli.json  usage-codex-healthy.json  usage-default.json
packaging/: codexbar-tray.desktop
scripts/: compile-engine.sh  gui-build-env.sh  package-linux.sh  setup-swift-toolchain.sh
