[package]
name = "codexbar-tray"
version = "0.1.0"
edition = "2021"
description = "Native Linux tray GUI for CodexBar — AI coding-provider usage in your panel"
license = "MIT"

[[bin]]
name = "codexbar-tray"
path = "src/main.rs"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_10"] }
libadwaita = { version = "0.7", features = ["v1_4"] }
glib = "0.20"
cairo-rs = "0.20"
ksni = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-channel = "2"
chrono = { version = "0.4", features = ["clock"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"

# Linux browser cookie import (Phase 4)
rusqlite = { version = "0.32", features = ["bundled"] }
aes-gcm = "0.10"
cbc = "0.1"
aes = "0.8"
pbkdf2 = "0.12"
sha1 = "0.10"
hmac = "0.12"
secret-service = { version = "4", default-features = false, features = ["rt-tokio-crypto-rust"] }

[profile.release]
opt-level = 2
strip = true
